[gd_scene load_steps=6 format=3]

[ext_resource type="Script" uid="uid://dl7vfy21f3bkr" path="res://scenes/messages/cozy_message.gd" id="1"]
[ext_resource type="PackedScene" path="res://scenes/messages/message_content.tscn" id="2"]
[ext_resource type="Texture2D" uid="uid://bnn82g4oqha4o" path="res://assets/theme/icons/reply_arrow.svg" id="3"]
[ext_resource type="PackedScene" path="res://scenes/common/avatar.tscn" id="4"]
[ext_resource type="Texture2D" uid="uid://dwrmq65j76jea" path="res://assets/theme/icons/thread.svg" id="5"]

[node name="CozyMessage" type="HBoxContainer"]
offset_right = 600.0
theme_override_constants/separation = 12
script = ExtResource("1")

[node name="AvatarColumn" type="VBoxContainer" parent="."]
layout_mode = 2
custom_minimum_size = Vector2(42, 0)

[node name="Avatar" parent="AvatarColumn" instance=ExtResource("4")]
layout_mode = 2
avatar_size = 42
show_letter = true
letter_font_size = 18

[node name="ContentColumn" type="VBoxContainer" parent="."]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 2

[node name="Header" type="HBoxContainer" parent="ContentColumn"]
layout_mode = 2
theme_override_constants/separation = 8

[node name="Author" type="Label" parent="ContentColumn/Header"]
layout_mode = 2
text = "Username"

[node name="Timestamp" type="Label" parent="ContentColumn/Header"]
layout_mode = 2
text = "Today at 10:30 AM"

[node name="ReplyRef" type="HBoxContainer" parent="ContentColumn"]
visible = false
layout_mode = 2
theme_override_constants/separation = 4

[node name="ReplyIcon" type="TextureRect" parent="ContentColumn/ReplyRef"]
layout_mode = 2
texture = ExtResource("3")
stretch_mode = 2

[node name="ReplyAuthor" type="Label" parent="ContentColumn/ReplyRef"]
layout_mode = 2

[node name="ReplyPreview" type="Label" parent="ContentColumn/ReplyRef"]
layout_mode = 2

[node name="MessageContent" parent="ContentColumn" instance=ExtResource("2")]
layout_mode = 2

[node name="ThreadIndicator" type="HBoxContainer" parent="ContentColumn"]
visible = false
layout_mode = 2
theme_override_constants/separation = 4

[node name="ThreadIcon" type="TextureRect" parent="ContentColumn/ThreadIndicator"]
layout_mode = 2
custom_minimum_size = Vector2(14, 14)
texture = ExtResource("5")
expand_mode = 1
stretch_mode = 5

[node name="ThreadCountLabel" type="Label" parent="ContentColumn/ThreadIndicator"]
layout_mode = 2
